# sirius-cli

./: .gitignore  .pre-commit-config.yaml  AUDIT.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  SECURITY.md  implementation_plan_036.md  pyproject.toml
.github/workflows/: lint.yml  publish.yml
docs/: CNAME  HOW_IT_WORKS.md  HOW_TO_USE.md  index.html  script.js  style.css
examples/: billing-config.json  orders.csv  users.csv
sirius_cli/: __init__.py  cli.py  fetcher.py  generator.py  parser.py  preview.py
sirius_cli/backends/: __init__.py  base.py  fastapi.py
sirius_cli/templates/: docker-compose.yml.jinja2  preview_ui.html
sirius_cli/templates/backend/: Dockerfile.jinja2  auth.py.jinja2  database.py.jinja2  main.py.jinja2  models.py.jinja2  requirements.txt.jinja2
sirius_cli/templates/backend/alembic/: env.py.jinja2
sirius_cli/templates/backends/fastapi/: Dockerfile.jinja2  models.py.jinja2  requirements.txt.jinja2  schemas.py.jinja2
sirius_cli/templates/backends/fastapi/alembic/: script.py.mako.jinja2
sirius_cli/templates/frontend/: .env.jinja2  index.html.jinja2  package.json.jinja2  tailwind.config.js.jinja2
sirius_cli/templates/frontend/src/: App.tsx.jinja2  Dashboard.tsx.jinja2  Login.tsx.jinja2  TableCrud.tsx.jinja2  index.css.jinja2
sirius_cli/templates/frontend/src/components/: SiriusBadge.tsx.jinja2  SiriusDropdown.tsx.jinja2  SiriusError.tsx.jinja2  SiriusPagination.tsx.jinja2  SiriusTable.tsx.jinja2  SiriusToast.tsx.jinja2
tests/: conftest.py  test_cli.py  test_cli_flags.py  test_generator.py  test_parser.py  test_preview.py
