[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sirius-cli"
version = "0.3.9"
description = "A rapid prototyping tool for generating containerized backend + frontend CRUD stacks from CSV/SQLite files."
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [
    { name = "Amine Ait Hamma", email = "amineaithamma2004@gmail.com" }
]
maintainers = [
    { name = "Amine Ait Hamma", email = "amineaithamma2004@gmail.com" }
]
keywords = [
    "cli",
    "scaffolding",
    "fastapi",
    "react",
    "crud",
    "code-generator",
    "prototyping",
    "sqlite",
    "csv",
    "docker"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Code Generators"
]
dependencies = [
    "typer>=0.9.0",
    "jinja2>=3.0.0",
    "pandas>=1.5.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.11.0",
    "pydantic>=2.0.0",
    "openpyxl>=3.0.0",
    "inflect>=7.0.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.20.0",
    "requests>=2.28.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black==26.5.1",
    "isort>=5.12.0",
    "mypy>=1.0.0",
    "flake8>=6.0.0"
]
docs = [
    "mkdocs>=1.4.0",
    "mkdocs-material>=9.0.0"
]

[project.urls]
Homepage = "https://sirius-aah.com"
Documentation = "https://sirius-cli.sirius-aah.com"
Repository = "https://github.com/amineaith3/sirius-cli"
"Bug Tracker" = "https://github.com/amineaith3/sirius-cli/issues"

[project.scripts]
sirius-init = "sirius_cli.cli:app"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["sirius_cli", "sirius_cli.*"]

[tool.black]
line-length = 88
target-version = ["py39", "py310", "py311"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q"
testpaths = [
    "tests"
]
